tests/compile_fail/takes_borrowed_self.rs
use named::named;

struct S {}

impl S {
    #[named]
    fn always_true(&self) -> bool {
        true
    }
}

fn main() {}
